Changed squad references to teams and removed some of the standing squad processes

--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -52,7 +52,7 @@ Contribute new platform management capabilities to expand our ability to meet ou
 ### 3) Develop Depth in Key Technical Areas
 
 1. Continue current Redis focus from the new second Scalability team and evolve that focus as the scale increases but the maintenance becomes more boring. This may involve new teams focused on a vertical technology (like Redis) while Scalability moves on to a new challenge.
-1. Build on what we’ve started in the [Squad project model](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/projects.html#project-squads----squad-list) and see more results from small groups focusing on fewer concurrent efforts.
+1. Build on what we’ve started in the Squad project model and see more results from small groups focusing on fewer concurrent efforts.
 1. Partner with Development teams to fulfill initial [Stable Counterpart](/handbook/engineering/infrastructure/team/stable-counterpart.html) influence. As our staffing increases above the minimum oncall level, dedicate a larger percentage of new team member capacity towards enabling more efficiency and ownership across all of Engineering.
 
 ### 4) Invest in Team Members Capabilities
@@ -130,7 +130,7 @@ For details on the Department's structure, see the [**Infrastructure Teams Handb
 
 ## Stable Counterparts
 
-Infrastructure [Reliability Engineering Squads](./team/reliability/projects.html#project-squads----squad-list) may be aligned with [stage groups](/handbook/product/categories/#categories-a-z) as [stable counterparts](https://about.gitlab.com/blog/2018/10/16/an-ode-to-stable-counterparts/).
+Infrastructure SREs may be aligned with [stage groups](/handbook/product/categories/#categories-a-z) as [stable counterparts](https://about.gitlab.com/blog/2018/10/16/an-ode-to-stable-counterparts/).
 
 [Stable Counterparts](./team/stable-counterpart.html) are used as a framework for managing reliable services at GitLab.  The framework provides guidelines for collaboration between [Stage Groups](/handbook/product/categories/#categories-a-z) and [Infrastructure Teams](#teams).  
 
