--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -71,8 +71,9 @@ The Practices team does not necessarily own the above KPIs and metrics but rathe
 
 ### Project work VS Operations Work
 
-We strive for a 50% split between project work (`~work::project`) and operations work (~work::incident + ~work::general).
-Having more than 50% operations work is an indicator that the service/team is not in a healthy state and is something that needs to be addressed. More detail on this can be found in <https://sre.google/workbook/part-II-practices/>
+We strive for a 50% split between project work and operations work.
+Having more than 50% operations work is an indicator that the service/team is not in a healthy state and is something that needs to be addressed.
+More detail on this can be found in <https://sre.google/workbook/part-II-practices/>
 
 ### Gitaly Issue Tracker
 
