Revisions to Informing team members section

--- a/product/index.html.md.erb
+++ b/product/index.html.md.erb
@@ -50,14 +50,15 @@ For a small improvement, please feel free to merge the MR yourself. Otherwise, t
 
 ### Informing team members about the changes
 
-Please note it is your responsibility to inform team members as needed about your merge request. Consider the following best practices:
+It is your responsibility to communicate with relevant team members about your merge request. Here are some best practices to follow:
 
-- If it's a significant change that broadly affects the whole Product team and/or the Engineering team, please consult Product Operations for the best communication strategy. Otherwise, please follow the suggestions:
-     - If only specifically relevant to product management, tag '@gl-product' in the MR prior to merging
-     - If relevant to other teams, tag department leads such as the VP of UX, VP of Development or the Director of Quality Engineering in the MR prior to merging
-     - Share and cross post the MR link with a brief description in relevant channels such as Slack #product, #product-leadership, #eng-managers, #ux-managers
-     - Add as a read-only or discussion topic as appropriate in the [Weekly Product Management Meeting](/handbook/product/product-processes/#weekly-product-management-meeting)
-     - If you need more guidance on how/where/when to share, check out more [tips and best practices](/handbook/communication/#top-tips-and-best-practices) in [GitLab Communication](/handbook/communication/)
+- For significant changes affecting the whole Product or Engineering team, consult Product Operations for the best communication strategy.
+- For changes specific to product management, tag `@gl-product` in the merge request before merging.
+- Indicate in the comment whether you are requesting contributions and feedback or simply providing information.
+- For changes relevant to other teams, tag department leads such as the VP of UX, VP of Development, or the Director of Quality Engineering in the merge request before merging.
+- Share and cross-post the merge request link with a brief description in relevant channels such as Slack `#product`, `#product-leadership`, `#eng-managers`, and `#ux-managers`.
+- Add the merge request as a read-only or discussion topic in the [Weekly Product Management Meeting](/handbook/product/product-processes/#weekly-product-management-meeting).
+- For more guidance on communication, refer to the [GitLab Communication tips and best practices](/handbook/communication/#top-tips-and-best-practices).
 
 ## Product Management
 
