Growth development vision and mission

--- a/development/growth/index.html.md.erb
+++ b/development/growth/index.html.md.erb
@@ -12,21 +12,16 @@ description: "The Growth Stage consists of development teams working in the prod
 
 ## Vision
 
-Deliver enhancements through feature development and experiments that allow us to make informed product decisions and improve the customers experience, promote conversion and adoption of key stages.
+Grow an agile fullstack development capability to support our product goals through feature development and experiments
+enabling GitLab to make informed product decisions and achieve results in line with our [product direction](/handbook/marketing/growth/).
 
 ## Mission
 
-The Growth stage consists of groups that eliminate barriers between our users and our product value.
+Working inline with our [values](/handbook/values/), we focus on [iteration](/handbook/values/#iteration) and [collaboration](/handbook/values/#collaboration),
+working with and across areas of the product our development department counterparts maintain,
+as well our own [areas of responsibility](/handbook/marketing/growth/#product-ownership).
 
-* [Acquisition](acquisition/)
-* [Activation](activation/)
-
-Growth teams contribute to a GitLab [experimentation](/handbook/engineering/development/growth/experimentation/) platform to make it easier to run experiments and make data driven product decisions on GitLab.com.
-
-Teams focus on validating ideas with data and provide development input into two Growth product areas of focus:
-
-- [Registration Flow](https://gitlab.com/gitlab-org/gitlab/-/issues/299983/)
-- [Continuous onboarding](https://gitlab.com/gitlab-org/gitlab/-/issues/323176)
+## Direction
 
 We work on the issues prioritized by our product teams including running [experiments](/handbook/engineering/development/growth/experimentation/) on GitLab.com.
 More information on priorities can be found on the [Growth direction](/handbook/marketing/growth/) page.
@@ -42,6 +37,11 @@ Some useful links to see how and what we are working on include:
 - [Experimentation](experimentation/)
 - [GLEX](https://gitlab.com/gitlab-org/ruby/gems/gitlab-experiment)
 - [Experiment rollout](https://gitlab.com/groups/gitlab-org/-/boards/1352542?label_name[]=experiment-rollout)
+- [acquisition](acquisition/) group
+- [activation](activation/) group
+
+
+Growth teams contribute to a GitLab [experimentation](/handbook/engineering/development/growth/experimentation/) gem to make it easier to run experiments and make data driven product decisions on GitLab.com.
 
 ## Who Are We?
 
