Update Scalability Direction FY24 to include cost data

--- a/infrastructure/team/scalability/index.html.md.erb
+++ b/infrastructure/team/scalability/index.html.md.erb
@@ -103,6 +103,16 @@ Intial thoughts for this are:
 - ensuring that mature services include usage information per stage group, inclusion in the Error Budget, and scaling information
 - demonstrating the value that a service owner will receive as they improve the maturity of their service
 
+#### Share cost data with resource owners and users
+
+We already share certain elements of resource usage information with the stage groups to raise awareness about the resources required to support their feature categories.
+We will expand on the data we provide and include resource cost information. 
+This can take the form of cost per service (for example, how is the storage cost of the database attributed to each feature category),
+or per feature category (for example, what is the sum of all resources used to deliver GitLab Pages). 
+Access to this information can support product leadership in investment decisions.
+
+A future iteration for another year might be to incorporate usage information into a projections tool (like Tamland) to estimate future costs. 
+
 #### Incorporate more data sources into Error Budgets
 
 We are establishing a [performance indicator for Error Budgets](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/880).
