Update roster for Feb monthly chores

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -330,7 +330,7 @@ Schedule for Docs project maintenance tasks:
 - November, 2022: [Kati Paizee]
 - December, 2022: [Diana Logan]
 - January, 2023: [Phillip Wells]
-- February, 2023: [Ashraf Khamis]
+- February, 2023: [Jon Glassman]
 - March, 2023: [Marcin Sędłak-Jakubowski]
 
 ## Reviews
