Add stable counterparts section

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -199,6 +199,19 @@ For collaboration in other projects and subjects:
 [Susan Tacker]: https://gitlab.com/susantacker
 [Suzanne Selhorn]: https://gitlab.com/sselhorn
 
+### Stable counterparts
+
+The Technical Writing team gets assistance with the `gitlab-docs` project from stable counterparts outside the team.
+
+| Subject  | Person         |
+|:---------|:---------------|
+| Backend reviews | [Ash McKenzie], [David O'Regan] |
+| Frontend reviews | [Lukas 'Eipi' Eipert], [David O'Regan] |
+
+[Ash McKenzie]: https://gitlab.com/ashmckenzie
+[Lukas 'Eipi' Eipert]: https://gitlab.com/leipert
+[David O'Regan]: https://gitlab.com/oregand
+
 ### Assignments to development guidelines
 
 As GitLab grows, it's important to ensure that the
@@ -219,7 +232,7 @@ Development guidelines consist of:
 
 For merge request reviews:
 
-- If you belong to one of the stage groups, request a review from the Technical Writer assigned to your group.  
+- If you belong to one of the stage groups, request a review from the Technical Writer assigned to your group.
 - If you don't belong to a group that has a Technical Writer assigned, spin the [reviewer roulette](https://gitlab-org.gitlab.io/gitlab-roulette/?sortKey=stats.avg7&order=-1&hourFormat24=true&visible=maintainer%7Cdocs)
   to determine a Technical Writer to request review from.
 - Technical Writers provide a lighter level of editing on Developer Guideline pages than on user-facing docs.
@@ -260,7 +273,7 @@ The number of words in these repositories:
 | Oct 2022      | 2,271,350  |
 | Dec 2022      | 2,397,335  |
 
-**Change between May 2020 and Dec 2022:** 1,206,964 more words 
+**Change between May 2020 and Dec 2022:** 1,206,964 more words
 
 The word count has more than doubled in this timeframe.
 
