Update to enablement and saas team page to add newest team members

--- a/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
@@ -27,13 +27,15 @@ Quality Engineering Manager: Kassandra Svoboda
 
 | S.No 	| Stage       	| Group                     | SET Counterpart                                                        |
 |------	|---------------|---------------------------|------------------------------------------------------------------------|
-| 1    	| [Systems]     | [Distribution]            | Grant Young <br/> Nailia Iskhakova                                     |
-| 2   	| [Systems]     | [Geo]                     | Nick Westbury                                                        	 |
-| 3   	| [Systems]     | [Gitaly]                  | John McDonnell                                                         |
-| 4    	| [Data Stores] | [Application Performance] | TBH                                                                    |
-| 5   	| [Data Stores] | [Global Search]           | Erick Banks                                                            |
-| 6  	| [Data Stores] | [Database]                | TBH                                                                    |
-| 7   	| [Data Stores] | [Pods]                    | TBH                                                                    |
+| 1    	| [Systems]     | [Distribution]            | Grant Young                                     |
+| 2    	| [Systems]     | [Distribution:Build]    | Nailia Iskhakova                                 |
+| 3    	| [Systems]     | [Distribution:Deploy]   | Vishal Patel                                     |
+| 4   	| [Systems]     | [Geo]                     | Nick Westbury                                                        	 |
+| 5   	| [Systems]     | [Gitaly]                  | John McDonnell                                                         |
+| 6    	| [Data Stores] | [Application Performance] | TBH                                                                    |
+| 7   	| [Data Stores] | [Global Search]           | Erick Banks                                                            |
+| 8  	| [Data Stores] | [Database]                | TBH                                                                    |
+| 9   	| [Data Stores] | [Pods]                    | TBH                                                                    |
 
 [SaaS Platforms section]
 
@@ -42,7 +44,7 @@ Quality Engineering Manager: Kassandra Svoboda
 | 1    	| [SaaS Platforms]  | [Delivery]                     | TBH                                                                     |
 | 2    	| [SaaS Platforms]  | [Scalability]                  | TBH                                                                     |
 | 3    	| [SaaS Platforms]  | [GitLab Dedicated]             | TBH                                                                     |
-| 4    	| [SaaS Platforms]  | [US Public Sector Services]    | Andy Hohenner                                                                     |
+| 4    	| [SaaS Platforms]  | [US Public Sector Services]    | Andy Hohenner <br/> Brittany Wilkerson                                                                     |
 
 ## OKRs
 
@@ -89,7 +91,9 @@ except for a few exceptions curated to fit the needs of specific groups.
 [Enablement section]: /handbook/product/categories/#enablement-section
 [Systems]: /handbook/product/categories/#systems-stage
 [Data Stores]: /handbook/product/categories/#data-stores-stage
-[Distribution]: /handbook/product/categories/#distribution-group
+[Distribution]: /handbook/product/categories/#distributionbuild-group
+[Distribution:Build]: /handbook/product/categories/#distributionbuild-group
+[Distribution:Deploy]: /handbook/product/categories/#distributiondeploy-group
 [Geo]: /handbook/product/categories/#geo-group
 [Gitaly]: /handbook/product/categories/#gitaly-group
 [Application Performance]: /handbook/product/categories/#application-performance-group
