Update/verify metrics dashboard links in metrics page

--- a/metrics/analytics/analytics/product-intelligence/index.html.md.erb
+++ b/metrics/analytics/analytics/product-intelligence/index.html.md.erb
@@ -10,6 +10,6 @@ title: "Product Intelligence Group Engineering Metrics"
 {:toc .hidden-md .hidden-lg}
 
 
-<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Product Intelligence" } %>
+<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "product-intelligence" } %>
 
 
