--- a/metrics/data-science/index.html.md.erb
+++ b/metrics/data-science/index.html.md.erb
@@ -13,7 +13,7 @@ These pages are part of our centralized [Engineering Metrics Dashboards](/handbo
 
 ### Stage Pages
 * [Anti-abuse Stage Dashboards](/handbook/engineering/metrics/data-science/anti-abuse/)
-*
+* [ModelOps Stage Dashboards](/handbook/engineering/metrics/data-science/model-ops/)
 
 <%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "development_section", filter_value: "data-science" } %>
 
