--- a/metrics/data-science/modelops/ai-assisted/index.html.md.erb
+++ b/metrics/data-science/modelops/ai-assisted/index.html.md.erb
@@ -10,4 +10,4 @@ title: "AI Assisted Group Engineering Metrics"
   {:toc .hidden-md .hidden-lg}
 
 
-<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Applied-ml" } %>
+<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Ai Assisted" } %>
