--- a/metrics/enablement/data-stores/index.html.md.erb
+++ b/metrics/enablement/data-stores/index.html.md.erb
@@ -12,8 +12,8 @@ title: "Data Stores Stage Engineering Metrics"
 ### Group Pages
 * [Database Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/database)
 * [Global Search Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/global-search)
-* [Memory Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/memory)
-* [Sharding Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/sharding)
+* [Application Performance Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/application-performance)
+* [Pods Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/pods)
 
 <%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "stage", filter_value: "Data_stores" } %>
 
