--- a/metrics/enablement/data-stores/memory/index.html.md.erb
+++ b/metrics/enablement/data-stores/memory/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: "Memory Group Engineering Metrics"
+title: "Application Performance Group Engineering Metrics"
 ---
 
 ## On this page
@@ -10,6 +10,6 @@ title: "Memory Group Engineering Metrics"
 {:toc .hidden-md .hidden-lg}
 
 
-<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Memory" } %>
+<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Applicaton Performance" } %>
 
 
