--- a/metrics/dev/manage/index.html.md.erb
+++ b/metrics/dev/manage/index.html.md.erb
@@ -10,11 +10,11 @@ title: "Manage Stage Engineering Metrics"
 {:toc .hidden-md .hidden-lg}
 
 ### Group Pages
-* [Authentication and Authorization Group Dashboards](/handbook/engineering/metrics/dev/manage/access)
+* [Authentication and Authorization Group Dashboards](/handbook/engineering/metrics/dev/manage/authentication-and-authorization)
 * [Foundations Group Dashboards](/handbook/engineering/metrics/dev/manage/foundations)
 * [Import Group Dashboards](/handbook/engineering/metrics/dev/manage/import)
 * [Integrations Group Dashboards](/handbook/engineering/metrics/dev/manage/integrations)
-* [Workspace Group Dashboards](/handbook/engineering/metrics/dev/manage/workspace)
+* [Organization Group Dashboards](/handbook/engineering/metrics/dev/manage/organization)
 
 <%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "stage", filter_value: "Manage" } %>
 
