--- a/metrics/dev/manage/organization/index.html.md.erb
+++ b/metrics/dev/manage/organization/index.html.md.erb
@@ -10,5 +10,5 @@ title: "Workspace Group Engineering Metrics"
 {:toc .hidden-md .hidden-lg}
 
 
-<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Workspace" } %>
+<%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Organization" } %>
 
