--- a/metrics/index.html.md.erb
+++ b/metrics/index.html.md.erb
@@ -25,27 +25,31 @@ The links below take you to a handbook dashboard page which covers metrics from 
     * [Source Code Group Dashboards](/handbook/engineering/metrics/dev/create/source-code)
     * [Code Review Group Dashboards](/handbook/engineering/metrics/dev/create/code-review)
     * [Editor Group Dashboards](/handbook/engineering/metrics/dev/create/editor)
-    * [Gitaly Group Dashboards](/handbook/engineering/metrics/dev/create/gitaly)
   * [Plan Stage Dashboards](/handbook/engineering/metrics/dev/plan)
     * [Project Management Group Dashboards](/handbook/engineering/metrics/dev/plan/project-management)
     * [Product Planning Group Dashboards](/handbook/engineering/metrics/dev/plan/product-planning)
     * [Certify Group Dashboards](/handbook/engineering/metrics/dev/plan/certify)
     * [Optimize Group Dashboards](/handbook/engineering/metrics/dev/plan/optimize)
   * [Manage Stage Dashboards](/handbook/engineering/metrics/dev/manage)
-    * [Access Group Dashboards](/handbook/engineering/metrics/dev/manage/access)
+    * [Authentication and Authorization Group Dashboards](/handbook/engineering/metrics/dev/manage/authentication-and-authorization)
     * [Foundations Group Dashboards](/handbook/engineering/metrics/dev/manage/foundations)
     * [Import Group Dashboards](/handbook/engineering/metrics/dev/manage/import)
     * [Integrations Group Dashboards](/handbook/engineering/metrics/dev/manage/integrations)
-    * [Workspace Group Dashboards](/handbook/engineering/metrics/dev/manage/workspace)
+    * [Organization Group Dashboards](/handbook/engineering/metrics/dev/manage/organization)
 * [Ops Section Dashboards](/handbook/engineering/metrics/ops/)
   * [Verify Stage Dashboards](/handbook/engineering/metrics/ops/verify)
     * [Pipeline Execution Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-execution)
     * [Pipeline Authoring Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-authoring)
     * [Runner Group Dashboards](/handbook/engineering/metrics/ops/verify/runner)
     * [Pipeline Insights Group Dashboards](/handbook/engineering/metrics/ops/verify/pipeline-insights)
+    * [Runner SaaS Dashboards](/handbook/engineering/metrics/ops/verify/runner-saas)
   * [Package Stage Dashboards](/handbook/engineering/metrics/ops/package)
+    * [Package Registry Group Dashboards](/handbook/engineering/metrics/ops/package/package-registry)
+    * [Container Registry Dashboards](/handbook/engineering/metrics/ops/package/container-registry)
   * [Configure Stage Dashboards](/handbook/engineering/metrics/ops/configure)
   * [Monitor Stage Dashboards](/handbook/engineering/metrics/ops/monitor)
+    * [Respond Stage Dashboards](/handbook/engineering/metrics/ops/monitor/respond)
+    * [Observability Stage Dashboards](/handbook/engineering/metrics/ops/monitor/observability)
   * [Release Stage Dashboards](/handbook/engineering/metrics/ops/release)
 * [Sec Section Dashboards](/handbook/engineering/metrics/sec/)
   * [Secure Stage Dashboards](/handbook/engineering/metrics/sec/secure/)
@@ -58,30 +62,37 @@ The links below take you to a handbook dashboard page which covers metrics from 
     * [Threat Insights Group Dashboards](/handbook/engineering/metrics/sec/govern/threat-insights)
     * [Compliance Group Dashboards](/handbook/engineering/metrics/sec/govern/compliance)
 * [Analytics Section Dashboards](/handbook/engineering/metrics/analytics)
-  * [Product Intelligence Group Dashboards](/handbook/engineering/metrics/analytics/product-intelligence)
+  * [Analytics Stage Dashboards](/handbook/engineering/metrics/analytics)
+    * [Product Intelligence Group Dashboards](/handbook/engineering/metrics/analytics/analytics/product-intelligence)
+    * [Product Analytics Group Dashboards](/handbook/engineering/metrics/analytics/analytics/product-analytics)
 * [Growth Section Dashboards](/handbook/engineering/metrics/growth)
   * [Acquisition Group Dashboards](/handbook/engineering/metrics/growth/acquisition)
   * [Activation Group Dashboards](/handbook/engineering/metrics/growth/activation)
 * [Fulfillment Section Dashboards](/handbook/engineering/metrics/fulfillment/)
   * [Purchase Group Dashboards](/handbook/engineering/metrics/fulfillment/purchase)
-  * [License Group Dashboards](/handbook/engineering/metrics/fulfillment/license)
+  * [Provision Group Dashboards](/handbook/engineering/metrics/fulfillment/provision)
   * [Utilization Group Dashboards](/handbook/engineering/metrics/fulfillment/utilization)
+  * [Fulfillment Platform Group Dashboards](/handbook/engineering/metrics/fulfillment/fulfillment-platform)
+  * [Billing and Subscription Management Group Dashboards](/handbook/engineering/metrics/fulfillment/billing-and-subscription-management)
+  * [Commerce Integrations Group Dashboards](/handbook/engineering/metrics/fulfillment/commerce-integrations)
+  * [Fulfillment Admin Tooling Group Dashboards](/handbook/engineering/metrics/fulfillment/fulfillment-admin-tooling)
 * [Enablement Section Dashboards](/handbook/engineering/metrics/enablement/)
   * [Systems Stage Dashboards](/handbook/engineering/metrics/enablement/systems)
-    * [Distribution Group Dashboards](/handbook/engineering/metrics/enablement/distribution)
-    * [Geo Group Dashboards](/handbook/engineering/metrics/enablement/geo)
+    * [Distribution Group Dashboards](/handbook/engineering/metrics/enablement/systems/distribution)
+    * [Geo Group Dashboards](/handbook/engineering/metrics/enablement/systems/geo)
+    * [Gitaly Group Dashboards](/handbook/engineering/metrics/enablement/systems/gitaly)
   * [Data Stores Stage Dashboards](/handbook/engineering/metrics/enablement/data-stores)
-    * [Memory Group Dashboards](/handbook/engineering/metrics/enablement/memory)
-    * [Global Search Group Dashboards](/handbook/engineering/metrics/enablement/global-search)
-    * [Database Group Dashboards](/handbook/engineering/metrics/enablement/database)
-    * [Sharding Group Dashboards](/handbook/engineering/metrics/enablement/sharding)
+    * [Memory Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/memory)
+    * [Global Search Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/global-search)
+    * [Database Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/database)
+    * [Sharding Group Dashboards](/handbook/engineering/metrics/enablement/data-stores/sharding)
 * [Data Science Section Dashboards](/handbook/engineering/metrics/data-science/)
   * [Anti-Abuse Stage Dashboards](/handbook/engineering/metrics/data-science/anti-abuse/)
     * [Anti-Abuse Group Dashboards](/handbook/engineering/metrics/data-science/anti-abuse/anti-abuse)
-  * [AI Assisted Group Dashboards](/handbook/engineering/metrics/data-science/modelops/ai-assisted)
-  * [AI Assisted Group Dashboards](/handbook/engineering/metrics/data-science/modelops/ai-assisted)
-  * [MLOps Group Dashboards](/handbook/engineering/metrics/data-science/modelops/mlops)
-  * [DataOps Group Dashboards](/handbook/engineering/metrics/data-science/modelops/dataops)
+  * [ModelOps Stage Dashboards](/handbook/engineering/metrics/data-science/modelops/)
+    * [AI Assisted Group Dashboards](/handbook/engineering/metrics/data-science/modelops/ai-assisted)
+    * [MLOps Group Dashboards](/handbook/engineering/metrics/data-science/modelops/mlops)
+    * [DataOps Group Dashboards](/handbook/engineering/metrics/data-science/modelops/dataops)
 
 These handbook dashboard pages are populated from the following filterable Sisense dashboards.
 * [Top Engineering Metrics Dashboard](https://app.periscopedata.com/app/gitlab/1000952/Top-Engineering-Metrics-Dashboard)
