Update Purchase department to use different tag

--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -19,7 +19,7 @@ The Purchase group manages the [Purchase category](/handbook/product/categories/
 
 ## Team members
 
-<%= direct_team(role_regexp: /[,&] Fulfillment:Purchase/, manager_role: 'Fullstack Engineering Manager (Interim), Fulfillment:Purchase') %>
+<%= department_team(base_department: "Fulfillment:Purchase Team") %>
 
 ## Stable Counterparts
 
