Add some examples for things a SSC can do

--- a/support/support-stable-counterparts.html.md.erb
+++ b/support/support-stable-counterparts.html.md.erb
@@ -83,14 +83,17 @@ Just like us, the product teams are spread across the globe. Due to this, it mig
 - Be the customers' voice and an influencing agent on product related decisions and future roadmap.
 - [Optional] Help with questions in the Product team's Slack channels.
 
+#### Examples of SSC activities
 
-### Provide reviews of customer enablement campaigns 
+There's many different groups, and no one approach to being a SSC will be the perfect fit for all. Finding out how to best work with your group can take a while (one Senior Support Engineer said it took them more than two years to feel they really figured it out), and as everything at GitLab it is an iterative and – hopefully – transparent process. The expectations listed in the section above are a good starting point, but they are neither compulsory nor can they be complete.
 
-The [Customer Success Programs Team](/handbook/sales/field-operations/customer-success-operations/cs-ops-programs) creates campaigns to inform and educate our customers to help expand their usage of GitLab. As an SSC you're uniquely positioned as a Subject Matter Expert to review the communication that will go to customers.
+Here's some things that other SSCs are doing that might serve as additional inspiration:
 
-- Review communications being sent out to customers (in coordination with Product Managers and CSMs) with an eye for technical accuracy and ticket deflection. See [SME Review Guidelines](/handbook/sales/field-operations/customer-success-operations/cs-ops-programs/#subject-matter-expert-sme-review-guidelines) for more information.
-
-The overall burden of this responisibility should be low: 30-60m of review per campaign that's created.
+- Helping with UX research: As a Support Engineer, you're uniquely qualified to help defining good "real life" test scenarios and creating environments for them ([example from Pipeline Authoring](https://gitlab.com/gitlab-org/ux-research/-/issues/2309#note_1237714663))
+- Helping with Product design: When product designers plan upcoming features, you can look at those plans from the perspective of what kind of problems customers are likely to run into and how to avoid it (example for [Authentication and Authorization](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/91673#note_1035754969))
+- On a cadence, identify and tag or list relevant Support tickets you've worked on or seen (examples for [Pipeline Authoring](https://gitlab.com/gitlab-gold/mg-gold/log/-/issues/5#note_1227878476), [Pipeline Execution](https://gitlab.com/gitlab-gold/mg-gold/log/-/issues/4#note_1227880727)) 
+- Contacting customers on behalf of the product group: Normally this is something the CMOC does, but in non-urgent cases you might be better equipped with domain-specific knowledge for a specific conversation with a customer ([example from Pipeline Execution](https://gitlab.com/gitlab-com/support/internal-requests/-/issues/18107))
+- Provide reviews of customer enablement campaigns: The [Customer Success Programs Team](/handbook/sales/field-operations/customer-success-operations/cs-ops-programs) creates campaigns to inform and educate our customers to help expand their usage of GitLab. As an SSC you're uniquely positioned as a Subject Matter Expert to review the communication that will go to customers with an eye for technical accuracy and ticket deflection. See [SME Review Guidelines](/handbook/sales/field-operations/customer-success-operations/cs-ops-programs/#subject-matter-expert-sme-review-guidelines) for more information.
 
 ### Be available to support and mentor newly onboarded SSCs
 
